@@ -14,6 +14,7 @@ POE = 1.004
 
 [Prereqs / TestRequires]
 Test::More = 0.90
+Test::Fatal = 0.003
 
 [@Basic]
 
