@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    + Switched to Test::Fatal (perigrin)
 
 0.210     2010-11-04 21:48:59 Europe/Berlin
     + Switched to Dist::Zilla for the author (Getty)
